// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<I18nProvider> children get i18n from context 1`] = `
<I18nProvider
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
>
  <TestElement>
    <div>
      Test
    </div>
  </TestElement>
</I18nProvider>
`;

exports[`translate Component render translated component 1`] = `
<TestElement
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
/>
`;
